--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,4 +1,4 @@
-homepage: "https://vandevliet.me/cast-your-gtm-variables-to-another-type-with-this-new-gtm-tag-template/"
+homepage: "https://vandevliet.me"
 documentation: "https://vandevliet.me/cast-your-gtm-variables-to-another-type-with-this-new-gtm-tag-template/"
 versions:
     - sha: //
