--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,5 @@
 homepage: "https://vandevliet.me"
 documentation: "https://vandevliet.me/cast-your-gtm-variables-to-another-type-with-this-new-gtm-tag-template/"
 versions:
-  - sha: 0f7173cc7659a975a484058d624ebcfb0129133b
-    changeNotes: Initial release.
+  - sha: 4f0cf2bf60cb3b269474abe2984a5adda27d116d
+    changeNotes: Initial release
