--- a/metadata.yaml
+++ b/metadata.yaml
@@ -2,4 +2,4 @@ homepage: "https://vandevliet.me"
 documentation: "https://vandevliet.me/cast-your-gtm-variables-to-another-type-with-this-new-gtm-tag-template/"
 versions:
   - sha: 4f0cf2bf60cb3b269474abe2984a5adda27d116d
-    changeNotes: Initial release
+    changeNotes: Initial release.
